Avoid warning for G_PARAM_DEPRECATED with GCC 6 [-Wpedantic]

Refer to https://bugzilla.gnome.org/show_bug.cgi?id=767882
Related to GCC https://gcc.gnu.org/bugzilla/show_bug.cgi?id=71803